[tool.poetry]
name = "roboticscost"
version = "0.1.0"
description = ""
authors = ["Lune"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
numpy = "^1.26.4"
requests = "^2.31.0"
pandas = "^2.2.1"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
