[tool.poetry]
name = "roboticscost"
version = "0.1.0"
description = ""
authors = ["Lune"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python =">=3.8,<3.9.7 || >3.9.7,<4"
bs4 = "^0"
numpy = "^1"
requests = "^2"
pandas = "^2"
streamlit = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
